--- a/Practica Semana4/index.html
+++ b/Practica Semana4/index.html
@@ -29,9 +29,9 @@
 
 	<table>
 		
-		<tr >
+		<tr>
 			<th colspan="2">Nombre</th>
-			<th rowspan="2">Apellido</th>
+			<th >Apellido</th>
 			<th>Edad</th>
 		</tr>
 		<tr>
