--- a/Practica Semana5/Practica con Css/index.html
+++ b/Practica Semana5/Practica con Css/index.html
@@ -18,5 +18,15 @@
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet voluptatem, laborum. Asperiores molestiae provident debitis atque vitae impedit beatae, accusantium architecto. Illum quo, velit neque voluptatibus dolorum ex, tempore nam!</p>
     </main>
 
+
+
+    <div>
+        
+        <img src="img/github.png" alt="">
+    </div>
+
+
+
+
 </body>
 </html>
