--- a/Practica Semana 6/Ejercicio Imagenes/index.html
+++ b/Practica Semana 6/Ejercicio Imagenes/index.html
@@ -8,19 +8,32 @@
 <body>
 
 
-	<div class="imagenes">
-		
-		hola
-	</div>
+	<div>
+		<ul>
+			<li><a href="">
+				<img src="img/img1.jpg" alt="" class="peque">
+				<img src="img/img1.jpg" alt="" class="grande">
+			</a></li>
+		</ul>
+		<ul>
+			<li><a href="">
+				<img src="img/img2.png" alt="" class="peque">
+				<img src="img/img2.png" alt="" class="grande">
+			</a></li>
+		</ul>
+		<ul>
+			<li><a href="">
+				<img src="img/img3.png" alt="" class="peque">
+				<img src="img/img3.png" alt="" class="grande">
+			</a></li>
+		</ul>
+		<ul>
+			<li><a href="">
+				<img src="img/img4.jpg" alt="" class="peque">
+				<img src="img/img4.jpg" alt="" class="grande">
+			</a></li>
+		</ul>
 
-
-	<div class="next">
-		<img src="img/img1.jpg" alt="">
-		<img src="img/img1.jpg" alt="">
-		<img src="" alt="">
-		<img src="" alt="">
-		<img src="" alt="">
-		<img src="" alt="">
 	</div>
 	
 </body>
