--- a/Practica Semana 9/Ejercicio InnerHTML/index2.html
+++ b/Practica Semana 9/Ejercicio InnerHTML/index2.html
@@ -9,22 +9,40 @@
 	<h2>Encontrar elementos por Nombre Etiquetas </h2>
 	<p>Este ejemplo muestra como usar el método <b>getElementByTagName</b> </p>
 
-	<p class="intro">Hola mundo</p>
+	<p id="primero">Hola mundo</p>
 	<p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam sunt minima nisi molestias similique numquam, commodi debitis eos nam natus atque exercitationem blanditiis, a, repellendus illum incidunt corporis explicabo non.</p>
+	<p id="penultimo">Robertttttlique numquam, commodi debitis eos nam natus atque exercitationem blanditiis, a, repellendus illum incidunt corporis explicabo non.</p>
+
+	<p id="intro">Ultimos illum incidunt corporis explicabo non.</p>
 	<p id="demo">Claseeeeeeee</p>
 
 
 	<script>
 
 
-		var x = document.querySelectorAll("p.intro");
+		/*var x = document.querySelectorAll("p.intro");
 		document.getElementById("demo").innerHTML = 
-		"El texto en el primer parrafo (index 0) es: "+ x[1].innerHTML;
+		"El texto en el primer parrafo (index 0) es: "+ x[1].innerHTML;*/
 
 
 		/*var x = document.getElementsByClassName("intro");
 		document.getElementById("demo").innerHTML = 
-		"El texto en el primer parrafo (index 0) es: "+ x[1].innerHTML;*/
+		"El texto en el primer parrafo (index 0) es: "+ x[2].innerHTML;*/
+
+		document.getElementsByTagName('p')[0].innerHTML="JS es muy facil";
+
+
+		var w = window.innerWidth;
+		var h = window.innerHeight
+
+		alert(w+" "+h);
+
+
+/*
+		document.getElementById("primero").innerHTML = "JS es muy facil";
+		document.getElementById("penultimo").innerHTML = "JS es muy facil";
+*/
+
 
 		/*document.getElementById("demo").innerHTML = 
 		"El texto en el primer parrafo (index 0) es: "+ document.getElementsByClassName("intro")[0].innerHTML;*/
